Alterando exemplos de teste