@@ -12,157 +12,133 @@ public class MapAdapterTest {
     @BeforeEach
     void setUp() {
         listaMap = new MapAdapter<>();
-        listaMap.add("maçã");     // Índice 0
-        listaMap.add("banana");   // Índice 1
-        listaMap.add("laranja");  // Índice 2
+        listaMap.add("Thales");
+        listaMap.add("Sonally");
+        listaMap.add("Julia");
     }
 
-    // --- Testes para size() e isEmpty() ---
     @Test
-    @DisplayName("Testar size: Deve retornar o tamanho correto da lista")
+    @DisplayName("Testar size")
     void testSize() {
         assertEquals(3, listaMap.size());
     }
 
     @Test
-    @DisplayName("Testar isEmpty: Deve retornar false para lista não vazia")
+    @DisplayName("Testar isEmpty: False para lista não vazia")
     void testIsNotEmpty() {
         assertFalse(listaMap.isEmpty());
     }
 
     @Test
-    @DisplayName("Testar isEmpty: Deve retornar true para lista vazia após clear")
+    @DisplayName("Testar isEmpty: True para lista vazia")
     void testIsEmptyAfterClear() {
         listaMap.clear();
         assertTrue(listaMap.isEmpty());
     }
 
-    // --- Testes para add() e get() ---
     @Test
-    @DisplayName("Testar add: Deve adicionar elemento no final e aumentar o tamanho")
+    @DisplayName("Testar add")
     void testAddElement() {
-        assertTrue(listaMap.add("uva"));
+        assertTrue(listaMap.add("Sabrina"));
         assertEquals(4, listaMap.size());
-        assertEquals("uva", listaMap.get(3));
+        assertEquals("Sabrina", listaMap.get(3));
     }
 
     @Test
-    @DisplayName("Testar get: Deve retornar o elemento no índice válido")
+    @DisplayName("Testar get: Indice Valido")
     void testGetValidIndex() {
-        assertEquals("maçã", listaMap.get(0));
-        assertEquals("banana", listaMap.get(1));
-        assertEquals("laranja", listaMap.get(2));
+        assertEquals("Thales", listaMap.get(0));
+        assertEquals("Sonally", listaMap.get(1));
+        assertEquals("Julia", listaMap.get(2));
     }
 
     @Test
-    @DisplayName("Testar get: Deve lançar IndexOutOfBoundsException para índice fora do limite superior")
-    void testGetOutOfBoundsUpper() {
-        assertThrows(IndexOutOfBoundsException.class, () -> listaMap.get(99));
+    @DisplayName("Testar get: Indice invalido superior")
+    void testGetNull() {
+        assertNull(listaMap.get(99));
     }
 
-    @Test
-    @DisplayName("Testar get: Deve lançar IndexOutOfBoundsException para índice negativo")
-    void testGetOutOfBoundsNegative() {
-        assertThrows(IndexOutOfBoundsException.class, () -> listaMap.get(-1));
-    }
 
-    // --- Testes para set() ---
     @Test
-    @DisplayName("Testar set: Deve substituir elemento em índice válido e retornar o antigo")
+    @DisplayName("Testar set: Substituir elemento")
     void testSetValidIndex() {
-        String oldValue = listaMap.set(1, "morango");
-        assertEquals("banana", oldValue);
+        String oldValue = listaMap.set(1, "Pedro");
+        assertEquals("Sonally", oldValue);
         assertEquals(3, listaMap.size());
-        assertEquals("morango", listaMap.get(1));
+        assertEquals("Pedro", listaMap.get(1));
     }
 
     @Test
-    @DisplayName("Testar set: Deve lançar IndexOutOfBoundsException para índice fora do limite superior")
-    void testSetOutOfBoundsUpper() {
-        assertThrows(IndexOutOfBoundsException.class, () -> listaMap.set(99, "kiwi"));
-    }
-
-    @Test
-    @DisplayName("Testar set: Deve lançar IndexOutOfBoundsException para índice negativo")
-    void testSetOutOfBoundsNegative() {
-        assertThrows(IndexOutOfBoundsException.class, () -> listaMap.set(-1, "kiwi"));
-    }
-
-    // --- Testes para remove() ---
-    @Test
-    @DisplayName("Testar remove(Object): Deve remover objeto existente e reindexar")
+    @DisplayName("Testar remove(Object): Remove objeto existente com reindexacao")
     void testRemoveObjectExisting() {
-        assertTrue(listaMap.remove("banana"));
+        assertTrue(listaMap.remove("Sonally"));
         assertEquals(2, listaMap.size());
-        assertFalse(listaMap.contains("banana"));
-        assertEquals("laranja", listaMap.get(1)); // Reindexação
+        assertFalse(listaMap.contains("Sonally"));
+        assertEquals("Julia", listaMap.get(1));
     }
 
     @Test
-    @DisplayName("Testar remove(Object): Não deve remover objeto inexistente")
+    @DisplayName("Testar remove(Object): Objeto inexistente")
     void testRemoveObjectNonExisting() {
-        assertFalse(listaMap.remove("manga"));
-        assertEquals(3, listaMap.size()); // Tamanho não deve mudar
+        assertFalse(listaMap.remove("Cecilia"));
+        assertEquals(3, listaMap.size());
     }
 
     @Test
-    @DisplayName("Testar remove(int): Deve remover elemento por índice e reindexar")
+    @DisplayName("Testar remove(int): Remove objeto existente com reindexacao")
     void testRemoveIndexExisting() {
-        String removedValue = listaMap.remove(0); // Remove "maçã"
-        assertEquals("maçã", removedValue);
+        String removedValue = listaMap.remove(0);
+        assertEquals("Thales", removedValue);
         assertEquals(2, listaMap.size());
-        assertFalse(listaMap.contains("maçã"));
-        assertEquals("banana", listaMap.get(0)); // Reindexação
-        assertEquals("laranja", listaMap.get(1)); // Reindexação
+        assertFalse(listaMap.contains("Thales"));
+        assertEquals("Sonally", listaMap.get(0));
+        assertEquals("Julia", listaMap.get(1));
     }
 
     @Test
-    @DisplayName("Testar remove(int): Deve lançar IndexOutOfBoundsException para índice fora do limite superior")
+    @DisplayName("Testar remove(int): Invalido, Remove fora do limite superior")
     void testRemoveIndexOutOfBoundsUpper() {
         assertThrows(IndexOutOfBoundsException.class, () -> listaMap.remove(99));
     }
 
     @Test
-    @DisplayName("Testar remove(int): Deve lançar IndexOutOfBoundsException para índice negativo")
+    @DisplayName("Testar remove(int): Invalido, Remove fora do limite inferior")
     void testRemoveIndexOutOfBoundsNegative() {
         assertThrows(IndexOutOfBoundsException.class, () -> listaMap.remove(-1));
     }
 
-    // --- Testes para contains() ---
     @Test
-    @DisplayName("Testar contains: Deve retornar true para elemento existente")
+    @DisplayName("Testar contains: Elemento existente")
     void testContainsExisting() {
-        assertTrue(listaMap.contains("maçã"));
+        assertTrue(listaMap.contains("Thales"));
     }
 
     @Test
-    @DisplayName("Testar contains: Deve retornar false para elemento inexistente")
+    @DisplayName("Testar contains: Elemento inexistente")
     void testContainsNonExisting() {
-        assertFalse(listaMap.contains("manga"));
+        assertFalse(listaMap.contains("Cecilia"));
     }
 
-    // --- Testes para indexOf() e lastIndexOf() ---
     @Test
-    @DisplayName("Testar indexOf: Deve retornar o índice da primeira ocorrência")
+    @DisplayName("Testar indexOf: Indice da primeira ocorrência")
     void testIndexOf() {
-        listaMap.add("maçã"); // Adiciona uma duplicata para testar lastIndexOf
-        assertEquals(0, listaMap.indexOf("maçã"));
-        assertEquals(1, listaMap.indexOf("banana"));
-        assertEquals(-1, listaMap.indexOf("abacaxi"));
+        listaMap.add("Thales");
+        assertEquals(0, listaMap.indexOf("Thales"));
+        assertEquals(1, listaMap.indexOf("Sonally"));
+        assertEquals(-1, listaMap.indexOf("Lucas"));
     }
 
     @Test
-    @DisplayName("Testar lastIndexOf: Deve retornar o índice da última ocorrência")
+    @DisplayName("Testar lastIndexOf: Indice da última ocorrência")
     void testLastIndexOf() {
-        listaMap.add("maçã"); // Adiciona uma duplicata
-        assertEquals(3, listaMap.lastIndexOf("maçã"));
-        assertEquals(1, listaMap.lastIndexOf("banana"));
-        assertEquals(-1, listaMap.lastIndexOf("abacaxi"));
+        listaMap.add("Thales");
+        assertEquals(3, listaMap.lastIndexOf("Thales"));
+        assertEquals(1, listaMap.lastIndexOf("Sonally"));
+        assertEquals(-1, listaMap.lastIndexOf("Lucas"));
     }
 
-    // --- Testes para clear() ---
     @Test
-    @DisplayName("Testar clear: Deve esvaziar a lista")
+    @DisplayName("Testar clear")
     void testClear() {
         assertFalse(listaMap.isEmpty());
         listaMap.clear();
@@ -170,161 +146,143 @@ public class MapAdapterTest {
         assertEquals(0, listaMap.size());
     }
 
-    // --- Testes para toArray() ---
     @Test
-    @DisplayName("Testar toArray(): Deve retornar um array com todos os elementos")
+    @DisplayName("Testar toArray(): Array com todos os elementos")
     void testToArray() {
         Object[] array = listaMap.toArray();
         assertEquals(3, array.length);
-        assertEquals("maçã", array[0]);
-        assertEquals("banana", array[1]);
-        assertEquals("laranja", array[2]);
+        assertEquals("Thales", array[0]);
+        assertEquals("Sonally", array[1]);
+        assertEquals("Julia", array[2]);
     }
 
     @Test
-    @DisplayName("Testar toArray(T[] a): Deve retornar um array do tipo especificado")
+    @DisplayName("Testar toArray(T[] a): Array do tipo especificado")
     void testToArrayWithType() {
         String[] stringArray = listaMap.toArray(new String[0]);
         assertEquals(3, stringArray.length);
-        assertEquals("maçã", stringArray[0]);
-        assertEquals("banana", stringArray[1]);
-        assertEquals("laranja", stringArray[2]);
+        assertEquals("Thales", stringArray[0]);
+        assertEquals("Sonally", stringArray[1]);
+        assertEquals("Julia", stringArray[2]);
     }
 
-    // --- Testes para containsAll() ---
+
     @Test
-    @DisplayName("Testar containsAll: Deve retornar true se contiver todos os elementos da coleção")
+    @DisplayName("Testar containsAll: Contem todos os elementos")
     void testContainsAllTrue() {
-        List<String> subList = Arrays.asList("maçã", "laranja");
+        List<String> subList = Arrays.asList("Thales", "Julia");
         assertTrue(listaMap.containsAll(subList));
     }
 
     @Test
-    @DisplayName("Testar containsAll: Deve retornar false se não contiver todos os elementos da coleção")
+    @DisplayName("Testar containsAll: Nao contem todos os elementos")
     void testContainsAllFalse() {
-        List<String> subListInexistente = Arrays.asList("maçã", "manga");
+        List<String> subListInexistente = Arrays.asList("Thales", "Cecilia");
         assertFalse(listaMap.containsAll(subListInexistente));
     }
 
-    // --- Testes para addAll() ---
     @Test
-    @DisplayName("Testar addAll(Collection): Deve adicionar todos os elementos da coleção")
+    @DisplayName("Testar addAll(Collection): Adiciona todos os elementos")
     void testAddAllCollection() {
-        List<String> newFruits = Arrays.asList("uva", "pera");
+        List<String> newFruits = Arrays.asList("Sabrina", "Janderson");
         assertTrue(listaMap.addAll(newFruits));
         assertEquals(5, listaMap.size());
-        assertTrue(listaMap.contains("uva"));
-        assertTrue(listaMap.contains("pera"));
+        assertTrue(listaMap.contains("Sabrina"));
+        assertTrue(listaMap.contains("Janderson"));
     }
 
     @Test
-    @DisplayName("Testar addAll(index, Collection): Deve lançar UnsupportedOperationException")
+    @DisplayName("Testar addAll(index, Collection): Operacao Invalida")
     void testAddAllIndexCollectionUnsupported() {
-        List<String> newFruits = Arrays.asList("uva");
+        List<String> newFruits = List.of("Sabrina");
         assertThrows(UnsupportedOperationException.class, () -> listaMap.addAll(0, newFruits));
     }
 
-    // --- Testes para add(index, E) ---
     @Test
-    @DisplayName("Testar add(index, E): Deve lançar UnsupportedOperationException")
+    @DisplayName("Testar add(index, E): Operacao Invalida")
     void testAddIndexUnsupported() {
-        assertThrows(UnsupportedOperationException.class, () -> listaMap.add(0, "abacaxi"));
+        assertThrows(UnsupportedOperationException.class, () -> listaMap.add(0, "Lucas"));
     }
 
-    // --- Testes para removeAll() ---
     @Test
-    @DisplayName("Testar removeAll: Deve remover todos os elementos da coleção")
+    @DisplayName("Testar removeAll: Todos os elementos")
     void testRemoveAll() {
-        List<String> itemsToRemove = Arrays.asList("maçã", "laranja", "kiwi");
+        List<String> itemsToRemove = Arrays.asList("Thales", "Julia", "Joao");
         assertTrue(listaMap.removeAll(itemsToRemove));
-        assertEquals(1, listaMap.size()); // Restou apenas "banana"
-        assertFalse(listaMap.contains("maçã"));
-        assertFalse(listaMap.contains("laranja"));
-        assertTrue(listaMap.contains("banana"));
+        assertEquals(1, listaMap.size());
+        assertFalse(listaMap.contains("Thales"));
+        assertFalse(listaMap.contains("Julia"));
+        assertTrue(listaMap.contains("Sonally"));
     }
 
-    // --- Testes para retainAll() ---
     @Test
-    @DisplayName("Testar retainAll: Deve reter apenas os elementos da coleção")
+    @DisplayName("Testar retainAll")
     void testRetainAll() {
-        List<String> itemsToRetain = Arrays.asList("banana", "kiwi");
+        List<String> itemsToRetain = Arrays.asList("Sonally", "Joao");
         assertTrue(listaMap.retainAll(itemsToRetain));
-        assertEquals(1, listaMap.size()); // Restou apenas "banana"
-        assertTrue(listaMap.contains("banana"));
-        assertFalse(listaMap.contains("maçã"));
-        assertFalse(listaMap.contains("laranja"));
+        assertEquals(1, listaMap.size());
+        assertTrue(listaMap.contains("Sonally"));
+        assertFalse(listaMap.contains("Thales"));
+        assertFalse(listaMap.contains("Julia"));
     }
 
-    // --- Testes para equals() e hashCode() ---
     @Test
-    @DisplayName("Testar equals: Deve retornar true para objetos iguais")
+    @DisplayName("Testar equals: Objetos iguais")
     void testEqualsTrue() {
         MapAdapter<Integer, String> anotherAdapter = new MapAdapter<>();
-        anotherAdapter.add("maçã");
-        anotherAdapter.add("banana");
-        anotherAdapter.add("laranja");
+        anotherAdapter.add("Thales");
+        anotherAdapter.add("Sonally");
+        anotherAdapter.add("Julia");
         assertEquals(listaMap, anotherAdapter);
     }
 
     @Test
-    @DisplayName("Testar equals: Deve retornar false para objetos diferentes")
+    @DisplayName("Testar equals: Objetos diferentes")
     void testEqualsFalse() {
         MapAdapter<Integer, String> anotherAdapter = new MapAdapter<>();
-        anotherAdapter.add("maçã");
-        anotherAdapter.add("banana");
-        anotherAdapter.add("laranja");
-        anotherAdapter.add("uva");
+        anotherAdapter.add("Thales");
+        anotherAdapter.add("Sonally");
+        anotherAdapter.add("Julia");
+        anotherAdapter.add("Sabrina");
         assertNotEquals(listaMap, anotherAdapter);
     }
 
     @Test
-    @DisplayName("Testar hashCode: Deve retornar o mesmo hashCode para objetos iguais")
-    void testHashCode() {
-        MapAdapter<Integer, String> anotherAdapter = new MapAdapter<>();
-        anotherAdapter.add("maçã");
-        anotherAdapter.add("banana");
-        anotherAdapter.add("laranja");
-        assertEquals(listaMap.hashCode(), anotherAdapter.hashCode());
-    }
-
-    // --- Testes para ValueIterator ---
-    @Test
-    @DisplayName("Testar ValueIterator: Deve iterar sobre os elementos corretamente")
+    @DisplayName("Testar ValueIterator: Toos os elementos")
     void testValueIteratorIteration() {
         Iterator<String> iterator = listaMap.iterator();
         assertTrue(iterator.hasNext());
-        assertEquals("maçã", iterator.next());
+        assertEquals("Thales", iterator.next());
         assertTrue(iterator.hasNext());
-        assertEquals("banana", iterator.next());
+        assertEquals("Sonally", iterator.next());
         assertTrue(iterator.hasNext());
-        assertEquals("laranja", iterator.next());
+        assertEquals("Julia", iterator.next());
         assertFalse(iterator.hasNext());
         assertThrows(NoSuchElementException.class, iterator::next);
     }
 
     @Test
-    @DisplayName("Testar ValueIterator: Deve lançar UnsupportedOperationException para remove()")
+    @DisplayName("Testar ValueIterator: Operacao Invalida")
     void testValueIteratorRemoveUnsupported() {
         Iterator<String> iterator = listaMap.iterator();
-        iterator.next(); // Avança para um elemento
+        iterator.next();
         assertThrows(UnsupportedOperationException.class, iterator::remove);
     }
 
-    // --- Testes para métodos não suportados da List ---
     @Test
-    @DisplayName("Testar listIterator(): Deve lançar UnsupportedOperationException")
+    @DisplayName("Testar listIterator(): Operacao Invalida")
     void testListIteratorUnsupported() {
         assertThrows(UnsupportedOperationException.class, () -> listaMap.listIterator());
     }
 
     @Test
-    @DisplayName("Testar listIterator(int index): Deve lançar UnsupportedOperationException")
+    @DisplayName("Testar listIterator(int index): Operacao Invalida")
     void testListIteratorIndexUnsupported() {
         assertThrows(UnsupportedOperationException.class, () -> listaMap.listIterator(0));
     }
 
     @Test
-    @DisplayName("Testar subList(): Deve lançar UnsupportedOperationException")
+    @DisplayName("Testar subList(): Operacao Invalida")
     void testSubListUnsupported() {
         assertThrows(UnsupportedOperationException.class, () -> listaMap.subList(0, 1));
     }
